<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/MyToolbarStyle"/>

    <Button
        android:id="@+id/showCountryListButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/all_countries"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button_background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/showEuropeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/europe"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>


        <Button
            android:id="@+id/showAfricaButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/africa"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/showNorthAmericaButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/north_america"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/showSouthAmericaButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/south_america"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/showAsiaButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/asia"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>


        <Button
            android:id="@+id/showOceaniaButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/oceania"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/savedCapitals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/saved_capitals"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>


        <Button
            android:id="@+id/savedFlags"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/saved_flags"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>
    </LinearLayout>

</LinearLayout>
