<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/MyToolbarStyle" />

    <TextView
        android:id="@+id/userEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/viewStatsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="17sp"
        android:text="@string/view_statistics"
        android:layout_below="@id/userEmailTextView"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:background="@drawable/button_background" />

    <Button
        android:id="@+id/makeAdminButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="17sp"
        android:text="@string/make_admin"
        android:layout_below="@id/viewStatsButton"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:background="@drawable/button_background" />

    <Button
        android:id="@+id/resetProgressButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="17sp"
        android:text="@string/reset_progress"
        android:layout_below="@id/makeAdminButton"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:background="@drawable/button_background" />

</RelativeLayout>
